# AnalogueSynth

./: .gitignore  AnalogSynth.jucer  BUILD_STATUS.md  CMakeLists.txt
.github/workflows/: build-windows.yml
Resources/: AnalogSynth.uidesc
Source/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Main.cpp  MinimalPlugin.h  ModMatrix.cpp  ModMatrix.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthVoice.cpp  SynthVoice.h
Source/LookAndFeel/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h
cmake/: FetchJUCE.cmake  mingw-toolchain.cmake
demo-midi/: 01-chord-progression.mid  02-bass-line.mid  03-arp-chord-cmin7.mid  04-lead-melody.mid  05-full-demo.mid  gen_demos.py
test/demo-midi/: gen_midi.py  test-track.mid
